fixed navbar spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,6 +40,7 @@
 .row {
   display: flex;
   justify-content: center;
+  margin-right: auto;
 }
 /* .rowjustify-content-center {
   color: aqua;
